--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Tech It Easy Dashboard</title>
-</head>
+    <link rel="stylesheet" href="styles.css">
+    </head>
 <body>
+<img src="./assets/tech_it_easy.png" alt="tech">
 
+
+
+<div class="tv-s1">
+    <h1>Numbers to Sell</h1>
+    <h2 id="numberToSell">0</h2>
+
+    <div class="tv-s2">
+        <h1>Revenue Target</h1>
+        <h2>0</h2>
+    </div>
+
+    <div class="tv-s3">
+        <h1>Revenue</h1>
+        <h2>0</h2>
+    </div>
+</div>
+
+
+<script src="main.js"></script>
 </body>
 </html>
+
+
